--- a/components/plasmic/blank_project/plasmic_blank_project.module.css
+++ b/components/plasmic/blank_project/plasmic_blank_project.module.css
@@ -767,3 +767,358 @@ p:where(.root_reset.p),
 :where(.root_reset_tags) p,
 p:where(.root_reset_tags) {
 }
+
+
+.plasmic_default__all {
+    display: block;
+    white-space: inherit;
+    grid-row: auto;
+    grid-column: auto;
+    position: relative;
+    background: none;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    box-shadow: none;
+    box-sizing: border-box;
+    text-decoration-line: none;
+    margin: 0;
+    border-width: 0px;
+}
+
+.__wab_expr_html_text * {
+    white-space: inherit;
+    grid-row: auto;
+    grid-column: auto;
+    background: none;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    box-shadow: none;
+    box-sizing: border-box;
+    text-decoration-line: none;
+    margin: 0;
+    border-width: 0px;
+}
+
+
+.plasmic_default__img {
+    display: inline-block;
+}
+
+.__wab_expr_html_text img {
+    white-space: inherit;
+}
+
+
+.plasmic_default__li {
+    display: list-item;
+}
+
+.__wab_expr_html_text li {
+    white-space: inherit;
+}
+
+
+.plasmic_default__span {
+    display: inline;
+    position: static;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+}
+
+.__wab_expr_html_text span {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+}
+
+
+.plasmic_default__input {
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+    background-image: linear-gradient(#ffffff, #ffffff);
+    padding: 2px;
+    border: 1px solid lightgray;
+}
+
+.__wab_expr_html_text input {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+    background-image: linear-gradient(#ffffff, #ffffff);
+    padding: 2px;
+    border: 1px solid lightgray;
+}
+
+
+.plasmic_default__textarea {
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+    padding: 2px;
+    border: 1px solid lightgray;
+}
+
+.__wab_expr_html_text textarea {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+    padding: 2px;
+    border: 1px solid lightgray;
+}
+
+
+.plasmic_default__button {
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+    background-image: none;
+    align-items: flex-start;
+    text-align: center;
+    padding: 2px 6px;
+    border: 1px solid lightgray;
+}
+
+.__wab_expr_html_text button {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+    background-image: none;
+    align-items: flex-start;
+    text-align: center;
+    padding: 2px 6px;
+    border: 1px solid lightgray;
+}
+
+
+.plasmic_default__code {
+    font-family: inherit;
+    line-height: inherit;
+}
+
+.__wab_expr_html_text code {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+}
+
+
+.plasmic_default__pre {
+    font-family: inherit;
+    line-height: inherit;
+}
+
+.__wab_expr_html_text pre {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+}
+
+
+.plasmic_default__p {
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+}
+
+.__wab_expr_html_text p {
+    white-space: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-transform: inherit;
+}
+
+
+.plasmic_default__h1 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.__wab_expr_html_text h1 {
+    white-space: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+.plasmic_default__h2 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.__wab_expr_html_text h2 {
+    white-space: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+.plasmic_default__h3 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.__wab_expr_html_text h3 {
+    white-space: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+.plasmic_default__h4 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.__wab_expr_html_text h4 {
+    white-space: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+.plasmic_default__h5 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.__wab_expr_html_text h5 {
+    white-space: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+.plasmic_default__h6 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.__wab_expr_html_text h6 {
+    white-space: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+.plasmic_default__address {
+    font-style: inherit;
+}
+
+.__wab_expr_html_text address {
+    white-space: inherit;
+    font-style: inherit;
+}
+
+
+.plasmic_default__a {
+    color: inherit;
+}
+
+.__wab_expr_html_text a {
+    white-space: inherit;
+    color: inherit;
+}
+
+
+.plasmic_default__ol {
+    list-style-type: none;
+    padding: 0;
+}
+
+.__wab_expr_html_text ol {
+    white-space: inherit;
+    list-style-type: none;
+    padding: 0;
+}
+
+
+.plasmic_default__ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.__wab_expr_html_text ul {
+    white-space: inherit;
+    list-style-type: none;
+    padding: 0;
+}
+
+
+.plasmic_default__select {
+    padding: 2px 6px;
+}
+
+.__wab_expr_html_text select {
+    white-space: inherit;
+    padding: 2px 6px;
+}
+
+.plasmic_default__component_wrapper {
+    display: grid;
+}
+
+.plasmic_default__inline {
+    display: inline;
+}
+
+.plasmic_page_wrapper {
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+    align-items: stretch;
+    align-self: start;
+}
+
+.plasmic_page_wrapper > * {
+    height: auto !important;
+}
+
+.__wab_expr_html_text {
+    white-space: normal;
+}
