--- a/components/plasmic/blank_project/PlasmicHomepage.module.css
+++ b/components/plasmic/blank_project/PlasmicHomepage.module.css
@@ -1,12 +1,6 @@
 .root {
-  display: grid;
   position: relative;
-  width: 100%;
-  height: 100%;
-  align-content: flex-start;
-  justify-items: center;
-  min-width: 0;
-  min-height: 0;
+  display: grid;
   grid-template-columns:
     1fr minmax(0, var(--plsmc-wide-chunk)) var(--plsmc-viewport-gap)
     min(
@@ -14,26 +8,30 @@
       calc(100% - var(--plsmc-viewport-gap) - var(--plsmc-viewport-gap))
     )
     var(--plsmc-viewport-gap) minmax(0, var(--plsmc-wide-chunk)) 1fr;
-  padding: 0px;
+  align-content: flex-start;
+  justify-items: center;
+  width: 100%;
+  min-width: 0;
+  height: 100%;
+  min-height: 0;
+  padding: 0;
 }
+
 :where(.root > *) {
   grid-column: 4;
 }
-@media (min-width: 0px) and (max-width: 768px) {
+
+@media (width >= 0) and (width <= 768px) {
   :where(.root > *) {
     grid-column: 4;
   }
 }
+
 .section {
-  display: grid;
   position: relative;
-  width: 100%;
-  height: auto;
+  display: grid;
   grid-row-gap: 16px;
-  align-content: flex-start;
-  justify-items: center;
-  grid-column-start: 1;
-  grid-column-end: -1;
+  grid-column: 1 -1;
   grid-template-columns:
     1fr minmax(0, var(--plsmc-wide-chunk)) var(--plsmc-viewport-gap)
     min(
@@ -41,26 +39,34 @@
       calc(100% - var(--plsmc-viewport-gap) - var(--plsmc-viewport-gap))
     )
     var(--plsmc-viewport-gap) minmax(0, var(--plsmc-wide-chunk)) 1fr;
-  padding: 96px 0px;
+  align-content: flex-start;
+  justify-items: center;
+  width: 100%;
+  height: auto;
+  padding: 96px 0;
 }
+
 :where(.section > *) {
   grid-column: 4;
 }
-@media (min-width: 0px) and (max-width: 768px) {
+
+@media (width >= 0) and (width <= 768px) {
   :where(.section > *) {
     grid-column: 4;
   }
 }
+
 .h1 {
   position: relative;
   width: 100%;
+  min-width: 0;
   height: auto;
   margin-bottom: 32px;
-  min-width: 0;
 }
+
 .text {
   position: relative;
   width: 100%;
-  height: auto;
   min-width: 0;
+  height: auto;
 }
