--- a/components/plasmic/plasmic__default_style.module.css
+++ b/components/plasmic/plasmic__default_style.module.css
@@ -1,35 +1,37 @@
 :where(.all) {
-  display: block;
-  white-space: inherit;
-  grid-row: auto;
-  grid-column: auto;
   position: relative;
-  background: none;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  box-shadow: none;
-  box-sizing: border-box;
-  text-decoration-line: none;
-  margin: 0;
-  border-width: 0px;
-}
-:where(.__wab_expr_html_text *) {
-  white-space: inherit;
+  display: block;
   grid-row: auto;
   grid-column: auto;
-  background: none;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  box-shadow: none;
   box-sizing: border-box;
-  text-decoration-line: none;
   margin: 0;
-  border-width: 0px;
+  white-space: inherit;
+  background: none;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-width: 0;
+  box-shadow: none;
+  text-decoration-line: none;
+}
+
+:where(.__wab_expr_html_text *) {
+  grid-row: auto;
+  grid-column: auto;
+  box-sizing: border-box;
+  margin: 0;
+  white-space: inherit;
+  background: none;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-width: 0;
+  box-shadow: none;
+  text-decoration-line: none;
 }
 
 :where(.img) {
   display: inline-block;
 }
+
 :where(.__wab_expr_html_text img) {
   white-space: inherit;
 }
@@ -37,109 +39,114 @@
 :where(.li) {
   display: list-item;
 }
+
 :where(.__wab_expr_html_text li) {
   white-space: inherit;
 }
 
 :where(.span) {
-  display: inline;
   position: static;
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
+  display: inline;
   color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
   text-transform: inherit;
 }
+
 :where(.__wab_expr_html_text span) {
-  white-space: inherit;
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
   color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  white-space: inherit;
   text-transform: inherit;
 }
 
 :where(.input) {
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
-  color: inherit;
-  text-transform: inherit;
-  background-image: linear-gradient(#ffffff, #ffffff);
   padding: 2px;
+  color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  text-transform: inherit;
+  background-image: linear-gradient(#fff, #fff);
   border: 1px solid lightgray;
 }
+
 :where(.__wab_expr_html_text input) {
-  white-space: inherit;
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
-  color: inherit;
-  text-transform: inherit;
-  background-image: linear-gradient(#ffffff, #ffffff);
   padding: 2px;
+  color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  white-space: inherit;
+  text-transform: inherit;
+  background-image: linear-gradient(#fff, #fff);
   border: 1px solid lightgray;
 }
 
 :where(.textarea) {
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
-  color: inherit;
-  text-transform: inherit;
   padding: 2px;
+  color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  text-transform: inherit;
   border: 1px solid lightgray;
 }
+
 :where(.__wab_expr_html_text textarea) {
-  white-space: inherit;
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
-  color: inherit;
-  text-transform: inherit;
   padding: 2px;
+  color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  white-space: inherit;
+  text-transform: inherit;
   border: 1px solid lightgray;
 }
 
 :where(.button) {
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
+  align-items: flex-start;
+  padding: 2px 6px;
   color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  text-align: center;
   text-transform: inherit;
   background-image: none;
-  align-items: flex-start;
-  text-align: center;
-  padding: 2px 6px;
   border: 1px solid lightgray;
 }
+
 :where(.__wab_expr_html_text button) {
-  white-space: inherit;
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
+  align-items: flex-start;
+  padding: 2px 6px;
   color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  white-space: inherit;
+  text-align: center;
   text-transform: inherit;
   background-image: none;
-  align-items: flex-start;
-  text-align: center;
-  padding: 2px 6px;
   border: 1px solid lightgray;
 }
 
@@ -147,162 +154,180 @@
   font-family: inherit;
   line-height: inherit;
 }
+
 :where(.__wab_expr_html_text code) {
-  white-space: inherit;
   font-family: inherit;
   line-height: inherit;
+  white-space: inherit;
 }
 
 :where(.pre) {
   font-family: inherit;
   line-height: inherit;
 }
+
 :where(.__wab_expr_html_text pre) {
-  white-space: inherit;
   font-family: inherit;
   line-height: inherit;
+  white-space: inherit;
 }
 
 :where(.p) {
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
   color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
   text-transform: inherit;
 }
+
 :where(.__wab_expr_html_text p) {
-  white-space: inherit;
-  font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
   color: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+  white-space: inherit;
   text-transform: inherit;
 }
 
 :where(.h1) {
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
 }
+
 :where(.__wab_expr_html_text h1) {
-  white-space: inherit;
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
+  white-space: inherit;
 }
 
 :where(.h2) {
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
 }
+
 :where(.__wab_expr_html_text h2) {
-  white-space: inherit;
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
+  white-space: inherit;
 }
 
 :where(.h3) {
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
 }
+
 :where(.__wab_expr_html_text h3) {
-  white-space: inherit;
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
+  white-space: inherit;
 }
 
 :where(.h4) {
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
 }
+
 :where(.__wab_expr_html_text h4) {
-  white-space: inherit;
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
+  white-space: inherit;
 }
 
 :where(.h5) {
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
 }
+
 :where(.__wab_expr_html_text h5) {
-  white-space: inherit;
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
+  white-space: inherit;
 }
 
 :where(.h6) {
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
 }
+
 :where(.__wab_expr_html_text h6) {
-  white-space: inherit;
-  font-size: inherit;
   font-weight: inherit;
+  font-size: inherit;
+  white-space: inherit;
 }
 
 :where(.address) {
   font-style: inherit;
 }
+
 :where(.__wab_expr_html_text address) {
-  white-space: inherit;
   font-style: inherit;
+  white-space: inherit;
 }
 
 :where(.a) {
   color: inherit;
 }
+
 :where(.__wab_expr_html_text a) {
-  white-space: inherit;
   color: inherit;
+  white-space: inherit;
 }
 
 :where(.ol) {
-  list-style-type: none;
   padding: 0;
+  list-style-type: none;
 }
+
 :where(.__wab_expr_html_text ol) {
+  padding: 0;
   white-space: inherit;
   list-style-type: none;
-  padding: 0;
 }
 
 :where(.ul) {
-  list-style-type: none;
   padding: 0;
+  list-style-type: none;
 }
+
 :where(.__wab_expr_html_text ul) {
+  padding: 0;
   white-space: inherit;
   list-style-type: none;
-  padding: 0;
 }
 
 :where(.select) {
   padding: 2px 6px;
 }
+
 :where(.__wab_expr_html_text select) {
-  white-space: inherit;
   padding: 2px 6px;
+  white-space: inherit;
 }
 
 .plasmic_default__component_wrapper {
   display: grid;
 }
+
 .plasmic_default__inline {
   display: inline;
 }
+
 .plasmic_page_wrapper {
   display: flex;
-  width: 100%;
-  min-height: 100vh;
   align-items: stretch;
   align-self: start;
+  width: 100%;
+  min-height: 100vh;
 }
+
 .plasmic_page_wrapper > * {
   height: auto !important;
 }
+
 .__wab_expr_html_text {
   white-space: normal;
 }
